--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+design
 dist
 dist-ssr
 *.local
 *.zip
+*.fig
 
 # Editor directories and files
 .vscode/*
